Project

General

Profile

Actions

Bug #15379

closed

[PATCH] Fix documentation for Warning.warn

Bug #15379: [PATCH] Fix documentation for Warning.warn

Added by olleolleolle (Olle Jonsson) almost 8 years ago. Updated almost 8 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.6.0dev (2018-12-04 trunk 66199) [x86_64-darwin18]
[ruby-core:90287]

Description

Warning.warn does not add any newlines to the message argument, this just makes the documentation reflect that.

The new documentation matches the spec in ruby/core/warning/warn_spec.rb.


Files

0001-Fix-documentation-for-Warning.warn.patch (879 Bytes) 0001-Fix-documentation-for-Warning.warn.patch olleolleolle (Olle Jonsson), 12/04/2018 05:44 PM

Updated by nobu (Nobuyoshi Nakada) almost 8 years ago Actions #1

  • Status changed from Open to Closed

Applied in changeset trunk|r66208.


Fix documentation for Warning.warn [ci skip]

Warning.warn does not add any newlines to the message argument.
[Bug #15379]

From: Olle Jonsson

Actions

Also available in: PDF Atom